overflow-x: hidden fixed

--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -12,12 +12,9 @@
     position: relative;
     height: 100%;
     width: 100%;
-    overflow: auto;
+    overflow-x: hidden;
     scroll-snap-type: y mandatory;
 
-    //@media(max-height: 800px) {
-    //    scroll-snap-type: none;
-    //}
     @media (min-width:768px) and (min-height: 1306px) {
         scroll-snap-type: none;
     }
